kubernetes/fastapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: fastapi-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: fastapi-app

  template:
    metadata:
      labels:
        app: fastapi-app

    spec:
      containers:
      - name: fastapi-app

        image: 738605694660.dkr.ecr.ap-south-1.amazonaws.com/fastapi-app:v1

        ports:
        - containerPort: 8000
